CAMBIOS EN PORTADA
Cambiada fuente del texto de <p> a <H3>.  Y cambiado la fuente de la
navbar a 40px para ver mas grande el icono de menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   
- margin-bottom: 60px;
+
 
 }
 
@@ -43,7 +43,7 @@ ul.topnav {
     margin: 10;
     padding: 10;
     overflow: hidden;
-  margin-bottom: 60px;  
+   
 }
 
 /* Float the list items side by side */
@@ -60,7 +60,7 @@ ul.topnav li a {
     padding: 14px 16px;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 17px;
+    font-size: 40px;
 }
 
 /* Change background color of links on hover */
@@ -150,11 +150,11 @@ ul.topnav li.icon {display: none;}
       <div class="col-sm-12 col-md-10 col-md-offset-1">
               <div style="color:#ffffff"><h2>Ayudemos y colaboremos con la Comunidad.</h2>
 
-<p>Recomienda doctores o instituciones para que otros se enteren y puedan acceder a ellos.
+<H3>Recomienda doctores o instituciones para que otros se enteren y puedan acceder a ellos.
 
 Busca a los doctores, hospitales, farmacias y laboratorios más recomendados en el país,
 
-tu estado o ciudad.</p> </div>
+tu estado o ciudad.</H3> </div>
       </div>  
      
   </div>
