--- a/index.html
+++ b/index.html
@@ -17,24 +17,22 @@
     <!-- Custom CSS -->
     <style>
     
-body {
-/*css for full size background image*/
-  background: url(imagenes/fondo_hera.png)no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  
+
+html, body{
   height: 100%;
-  background-color: #060;
-  color: #fff;
-  text-align: center;
+}
+body { 
+			background-image: url(imagenes/fondo_hera.png) ;
+			background-position: center center;
+			background-repeat:  no-repeat;
+			background-attachment: fixed;
+			background-size:  cover;
+			background-color: #999;
+			 text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   
-
-
+  
 }
-
 
 
 /* Remove margins and padding from the list, and add a black background color */
@@ -73,7 +71,7 @@ ul.topnav li.icon {display: none;}
   ul.topnav li:not(:first-child) {display: none;}
   ul.topnav li.icon {
     float: right;
-    display: inline-block;
+    display: inline-block !important;
   }
 }
 
@@ -93,10 +91,6 @@ ul.topnav li.icon {display: none;}
     display: block;
     text-align: left;
   }
-  
-
-
-
 
     </style>
 
@@ -107,7 +101,7 @@ ul.topnav li.icon {display: none;}
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <head>
-  <title>Bootstrap Case</title>
+  <title>Hera</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -130,6 +124,7 @@ ul.topnav li.icon {display: none;}
 </head>
 
 <body>
+
 <ul class="topnav" id="myTopnav">
   <li><a href="#news"><img class="img-responsive" width="60px" src="imagenes/botones/logo_hera.png" /></a></li>
   <li><a href="#news"><img class="img-responsive" width="180px" src="imagenes/botones/doctores_boton.png" /></a></li>
