TERMINADO DOCTORES.HTML Y DOCTORES_OPINAR A FALTA DE RATING SYSTEM

--- a/doctores.html
+++ b/doctores.html
@@ -163,15 +163,20 @@ ul.topnav li.icon {display: none;}
   </div>
   
   <div class="container">
-    <div class="row top30" align="center">
-        <div class="col-xs-6">
-             <a href="index.html"><img class="img-responsive"  src="imagenes/botones/buscar_boton.png" /></a>
+    <div class="row" align="center">
+    <br>
+        <div class="col-xs-6" >
+             <a href="index.html"><img class="img-responsive"  align="right" width="180px"   src="imagenes/botones/buscar_boton.png" /></a>
         </div>
         <div class="col-xs-6">
-             <a href="index.html"><img class="img-responsive"  src="imagenes/botones/opinar_boton.png" /></a>
+             <a href="doctores_opinar.html"><img class="img-responsive" align="left" width="180px"   src="imagenes/botones/opinar_boton.png" /></a>
         </div>
     </div>
 </div>
+
+
+
+
     <!-- jQuery Version 1.11.1 -->
     <script src="js/jquery.js"></script>
 
