OPINAR_DOCTOR Y CONTACTAR

--- a/doctores.html
+++ b/doctores.html
@@ -17,6 +17,14 @@
     <!-- Custom CSS -->
     <style>
     
+#footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:30px;
+   width:100%;
+   background:#999;
+}
 
 html, body{
   height: 100%;
@@ -176,6 +184,8 @@ ul.topnav li.icon {display: none;}
 
 
 
+<div class="footer"><a href="contactar.html">Contactar</a> | <a href="condiciones_uso.html">Condiciones de Uso</a></div>
+       
 
     <!-- jQuery Version 1.11.1 -->
     <script src="js/jquery.js"></script>
