INDEX 2 DE PRUEBA

--- a/contactar.html
+++ b/contactar.html
@@ -241,8 +241,8 @@ $('#reg-form').submit(function(e){
 			    <br>
 			        <div class="col-sm-12 col-lg-12" >
 			            <div class="form-group">
-			        <label for="inputEmail">Por favor, escribe tu consulta</label>
-			        <textarea rows="4"   class="form-control" id="comentarios" name="comentarios" placeholder="Escribe aqui tu experiencia con el doctor" ></textarea>
+			        <label for="inputEmail">Por favor, escribe tu consulta o comentarios</label>
+			        <textarea rows="4"   class="form-control" id="comentarios" name="comentarios" placeholder="Escribe aqui tu consulta o comentarios" ></textarea>
 			    </div>
 			    </div>
 			        
