CAMBIO DE FONDO Y ASPECTO DE OPINAR DOCTOR

--- a/condiciones_uso.html
+++ b/condiciones_uso.html
@@ -30,7 +30,7 @@ html, body{
    background:#999;
 }
 body { 
-			background-image: url(imagenes/fondo_hera.png) ;
+			background-image: url(imagenes/fondo_hera.jpg) ;
 			background-position: center center;
 			background-repeat:  no-repeat;
 			background-attachment: fixed;
