--- a/contactar.html
+++ b/contactar.html
@@ -22,7 +22,7 @@ html, body{
   height: 100%;
 }
 body { 
-			background-image: url(imagenes/fondo_hera.png) ;
+			background-image: url(imagenes/fondo_hera.jpg) ;
 			background-position: center center;
 			background-repeat:  no-repeat;
 			background-attachment: fixed;
