--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,13 +34,11 @@ body {
   
 }
 
-#footer {
-   position:fixed;
-   left:0px;
-   bottom:0px;
-   height:30px;
-   width:100%;
-   background:#999;
+#pie  {
+    position: fixed;
+    height: 100px;
+    bottom: 0;
+    width: 100%;
 }
 
 .centered {
@@ -131,17 +129,21 @@ body {
       <div class="col-sm-12 col-md-10 col-md-offset-1">
               <div style="color:#ffffff"><h2>Ayudemos y colaboremos con la Comunidad.</h2>
 
-<H4>Recomienda doctores o instituciones para que otros se enteren y puedan acceder a ellos.
+<h4>Recomienda doctores o instituciones para que otros se enteren y puedan acceder a ellos.
 
 Busca a los doctores, hospitales, farmacias y laboratorios más recomendados en el país,
 
-tu estado o ciudad.</H4><br> </div>
+tu estado o ciudad.</h4><br> </div>
       </div>  
      
   </div>
 </div>
 
-<div class="footer"><a href="contactar.html">Contactar</a> | <a href="condiciones_uso.html">Condiciones de Uso</a></div>
+<div class="pie navbar-fixed-bottom">
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p class="text-center"><a href="contactar.html">Contactar</a> | <a href="condiciones_uso.html">Condiciones de Uso</a></p>
+</div>
        
     <!-- jQuery Version 1.11.1 -->
     <script src="js/jquery.js"></script>
